# teledocker

./: .env.example  Caddyfile  README.md  bugs.md  docker-compose.yml  pyproject.toml  spec.md
images/claude-agent/: Dockerfile
images/claude-agent/agent-bridge/: pyproject.toml
images/claude-agent/agent-bridge/src/agent_bridge/: __init__.py  claude.py  handlers.py  main.py  mcp_builder.py  mcp_config.py  sdk_runner.py
images/claude-agent/agent-bridge/tests/: test_cancel.py  test_main.py  test_mcp_builder.py  test_mcp_config.py  test_sdk_runner.py
scripts/: backup.sh  seed_admin.py  setup.sh
services/api-server/: Dockerfile  alembic.ini  pyproject.toml
services/api-server/src/api_server/: __init__.py  config.py  dependencies.py  main.py
services/api-server/src/api_server/db/: __init__.py  engine.py  models.py
services/api-server/src/api_server/db/migrations/: env.py
services/api-server/src/api_server/db/migrations/versions/: 001_initial_schema.py  002_cascade_delete_messages.py
services/api-server/src/api_server/middleware/: __init__.py  auth.py  error_handler.py  rate_limit.py
services/api-server/src/api_server/routers/: __init__.py  health.py  sessions.py  users.py
services/api-server/src/api_server/services/: __init__.py  message_service.py  session_service.py  user_service.py
services/api-server/tests/: test_build_env_vars.py  test_cancel_execution.py  test_db_session_cancellation.py  test_log_outbound_message.py  test_new_conversation.py  test_session_guards.py  test_session_history.py  test_session_service.py  test_sse_proxy.py  test_user_service.py
services/container-manager/: Dockerfile  pyproject.toml
services/container-manager/src/container_manager/: __init__.py  cleanup.py  config.py  docker_client.py  health.py  main.py  routers.py
services/container-manager/tests/: conftest.py  test_cancel.py  test_cleanup.py  test_docker_client.py  test_new_conversation.py  test_routers.py
services/telegram-bot/: Dockerfile  pyproject.toml
services/telegram-bot/src/telegram_bot/: __init__.py  api_client.py  config.py  formatters.py  keyboards.py  main.py  markdown_to_telegram.py
services/telegram-bot/src/telegram_bot/commands/: __init__.py  admin.py  cancel.py  files.py  session.py  shell.py  start.py
services/telegram-bot/src/telegram_bot/handlers/: __init__.py  callback.py  message.py
services/telegram-bot/src/telegram_bot/renderers/: __init__.py  streaming.py
services/telegram-bot/tests/: test_cancel.py  test_containers_command.py  test_formatters.py  test_keyboards.py  test_markdown_to_telegram.py  test_newchat_command.py  test_session_guards.py  test_sessions_command.py  test_setmodel_command.py  test_sse_error_handling.py  test_stream_events.py  test_streaming_renderer.py
