[project]
name = "chatops-container-manager"
version = "0.1.0"
description = "Docker container lifecycle management for ChatOps AI Bridge"
requires-python = ">=3.12"
dependencies = [
    "chatops-shared",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "aiodocker>=0.21.0",
    "redis[hiredis]>=5.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/container_manager"]

[tool.uv.sources]
chatops-shared = { workspace = true }
