[project]
name = "chatops-agent-bridge"
version = "0.1.0"
description = "WebSocket bridge process inside Claude agent containers"
requires-python = ">=3.12"
dependencies = [
    "websockets>=12.0",
    "psutil>=5.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_bridge"]
